--- a/_notebooks/2021-04-11-covid_prediction.ipynb
+++ b/_notebooks/2021-04-11-covid_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7f65e1fa",
+   "id": "7c7383fc",
    "metadata": {},
    "source": [
     "# Covid Prediction\n",
@@ -12,7 +12,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [jupyter]\n",
-    "- image: images/fire-aus.png"
+    "- image: images/covid-vaccine.jpg"
    ]
   },
   {
